syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.abstractmgs.core";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service MyService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the example's name.
message HelloRequest {
    string question = 1;
    string text = 2;
}

// The response message containing the greetings
message HelloReply {
    string answer = 1;
}